--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ol-mapbox-style-zhyt",
-    "version": "6.1.4",
+    "version": "6.1.5-dev-1",
     "description": "Create OpenLayers maps from Mapbox Style objects",
     "main": "dist/index.js",
     "repository": {
@@ -18,7 +18,6 @@
     "license": "BSD-2-Clause",
     "scripts": {
         "start": "webpack-dev-server --config ./webpack.config.examples.js",
-        "prepare": "npm run doc && npm run build",
         "build": "tsc --project tsconfig-build.json && webpack-cli --mode=production --config ./webpack.config.olms.js && webpack-cli --mode=production --config ./webpack.config.examples.js",
         "doc": "documentation readme -s API src/index.js src/stylefunction.js --document-exported true",
         "karma": "karma start test/karma.conf.js",
@@ -33,7 +32,7 @@
         "webfont-matcher": "^1.1.0"
     },
     "peerDependencies": {
-        "ol": "^6.1.0"
+        "ol-zhyt": "^6.4.2"
     },
     "devDependencies": {
         "@types/arcgis-rest-api": "^10.4.4",
@@ -59,7 +58,6 @@
         "mapbox-gl-styles": "^2.0.2",
         "mini-css-extract-plugin": "^0.4.5",
         "mocha": "^8.1.1",
-        "ol": "^6.4.3",
         "puppeteer": "^1.20.0",
         "should": "^13.2.3",
         "sinon": "^7.5.0",
