--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ol-mapbox-style-zhyt",
-    "version": "6.1.5-dev-1",
+    "version": "6.1.5-dev-2",
     "description": "Create OpenLayers maps from Mapbox Style objects",
     "main": "dist/index.js",
     "repository": {
@@ -58,6 +58,7 @@
         "mapbox-gl-styles": "^2.0.2",
         "mini-css-extract-plugin": "^0.4.5",
         "mocha": "^8.1.1",
+        "ol-zhyt": "^6.4.4-dev-1",
         "puppeteer": "^1.20.0",
         "should": "^13.2.3",
         "sinon": "^7.5.0",
